# dlt-snowflake-template

./: .gitignore  Makefile  README.md  TG-AGENT.md  pyproject.toml
.dlt/: config.toml  secrets.toml.example
.docs/: dlt-snow.md  rest-api-advanced.md  rest-api-basic.md  reverse-etl.md  telemtry.md  verified-sources.md
.github/workflows/: ci.yml  deploy.yml
deploy/: snow_env.py
deploy/spcs/: Dockerfile  dlt_dev_job.tmpl.yaml  dlt_dev_job_nosecret.tmpl.yaml  dlt_job.tmpl.yaml  job.yaml  service.yaml
deploy/tasks/: generate_tasks.py
docs/development-gameplan/: Makefile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/development-gameplan/src/: App.tsx  main.tsx
docs/development-gameplan/src/components/: AboutHero.tsx  Card.tsx  CodeBlock.tsx  DataTable.tsx  DatabaseCatalog.tsx  Flow.tsx  Footer.tsx  Hero.tsx  Note.tsx  Pager.tsx  RepoTree.tsx  SideNav.tsx  Tabs.tsx  VerifiedSourceCatalog.tsx
docs/development-gameplan/src/data/: databases.ts  nav.ts  (+1 more)
pipelines/: __init__.py  models.py  observability.py  registry.yml  registry_store.py  registry_sync.py  run.py  sample_source.py
sources/: __init__.py
sql/: 01_account_setup.sql  02_service_user.sql  02b_service_user_oidc.sql  03_external_stage.sql  04_compute_pool.sql  05_load_warehouse.sql  06_pipeline_registry.sql
sql/base/: 01_roles.sql  02_control_plane.sql  03_registry.sql
sql/dev/: 01_dev_db.sql  02_compute.sql
sql/prod/: 01_prod_db.sql  02_compute.sql  03_service_user.sql  03b_service_user_oidc.sql
tests/: test_registry_config.py  test_registry_smoke.py
(+37 files in other folders)
