[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dlt-snowflake-template"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "dlt[snowflake]>=1.0",
    "snowflake-connector-python>=3.7",
    "pyyaml>=6",
    "sqlalchemy>=2",
    "connectorx",
    "pyarrow",
]

[project.optional-dependencies]
postgres = ["psycopg2-binary"]
mssql    = ["pyodbc"]
mysql    = ["pymysql"]
oracle   = ["oracledb"]
dev      = ["duckdb", "dlt[duckdb]", "pytest>=8", "ruff"]

[tool.setuptools]
packages = ["pipelines"]

[tool.ruff]
line-length = 100
